Increase randomness. Fix PartTime.